<resources>
    <string name="app_name" translatable="false">Tastory</string>

    //Login,Signin 페이지
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="birth_year">년도</string>
    <string name="birth_month">월</string>
    <string name="birth_day">일</string>
    <string name="login_btn">로그인</string>
    <string name="toast_login">로그인 성공</string>
    <string name="signup_btn">회원가입</string>
    <string name="error_empty">필수입력항목을 입력해 주세요.</string>
    <string name="check_id">ID 중복 체크</string>
    <string name="check_exist_id">중복된 ID가 존재합니다. 다른 아이디를 입력해주세요</string>
    <string name="check_valid_Id">유효한 아이디입니다</string>
    <string name="check_pw">비밀번호 유효성 체크</string>
    <string name="check_invalid_pw_char">비밀번호에는 숫자, 영문 대문자가 하나 이상 포함되어야 합니다.</string>
    <string name="check_invalid_pw_special">특수문자(~!@#$%^*_-+=`|:;,.?/)가 하나 이상 포함되어야 합니다.</string>
    <string name="check_invalid_pw_char_han">비밀번호에는 한글 자음이나 모음이 들어갈 수 없습니다.</string>
    <string name="check_invalid_pw_length">비밀번호는 길이 8글자 이상, 20글자 이하여야 합니다.</string>
    <string name="check_valid_pw">유효한 비밀번호입니다</string>
    <string name="check_name">이름 입력 확인</string>
    <string name="check_invalid_name">이름에는 특수문자가 들어갈 수 없습니다.</string>
    <string name="check_birth">연도는 4자리, 월, 일은 2자리로 입력하세요.</string>
    <string name="check_birth_year">생년은 1900~2023까지입니다.</string>
    <string name="check_birth_month">월은 1~12까지입니다.</string>
    <string name="check_birth_day">날짜는 1~31까지입니다.</string>
    <string name="signup_failed">필수입력항목을 모두 제대로 입력해주세요.</string>

    //Feed 페이지
    <string name="welcome">님 환영합니다!</string>
    <string name="history">히스토리</string>
    <string name="update_time">3시간 전</string>
    <string name="stake_title">크리스마스 추천 맛집!</string>
    <string name="stake_review_preview">"벌써 2023년 연말이 다가왔습니다~! \n크리스마스와 연말을 맞아 가족 혹은 연인과 함께 방문하기 좋은 맛집을 소개해 드릴게요. :)\n\n"</string>
    <string name="steak_review_contents">연남동데이트하기 좋은 \n연남동 스테이크 맛집 블루쇼파스타\n\n분위기 있고, 맛도 좋은 연남동 스테이크 맛집\n\n골목이 복잡하지 않고\n번화가쪽에 위치하고 있는 것이 \n아니라 찾기 어렵지 않았어요!\n\n 차를 가지고 오셔도 걱정하실 것이 없는 게 근처에 연남동 공영주차장이 있어서\n거기에 주차를 하고 와서 이용하기에도 나쁘지 않을 것 같았어요.</string>
    <string name="steak_script">분위기 좋은 스테이크 맛집</string>

    //Feed Dialog 페이지
    <string name="event_pop">🎊이벤트 쿠폰 당첨🎉</string>
    <string name="event_first_line">이번 달 신상 맛집\n할인 쿠폰을 드립니다.</string>
    <string name="event_pop_close">닫기</string>

    //Detail 페이지
    <string name="blog_owner"> 님의 블로그</string>
    <string name="date" translatable="false">2023.12.07</string>
    <string name="nickname2">덕만</string>
    <string name="update_time2">5시간 전</string>
    <string name="makchang_title">서울 막창 맛집을 소개합니다~</string>
    <string name="makchang_locate">"힙지로에 돼지꼬리구이 막창 맛집 '을지로1막'"</string>
    <string name="makchang_review_preview">"저번주에 처음으로 을지로 3가역, 힙지로를 가보았다. 친구들에게 얘기만 듣다가 가보니까 신세계였다.\n\n"</string>
    <string name="makchang_review_contents">"그래서 며칠 뒤 친구를 꼬셔서 또 갔다왔다. 친구와 다녀온 곳은 '을지1막'이다.\n\n우리는 일찍 도착해서 대기가 없었지만 먹고 나갈 쯤엔 대기가 있었다. 솔직히 20대 보단 우리같은 나이 좀 있는 고객들이 많았다. 다들 퇴근하고 온 듯"</string>

    //mypage
    <string name="info">나의 정보</string>
    <string name="eng_id" translatable="false">ID</string>
    <string name="my_posts">나의 글</string>
    <string name="christmas_waiting">"크리스마스를 맞아 웨이팅 없이는 갈 수 없는 맛집에 다녀온 후기를 들려드리려고 합니다~! 이번에 제가 다녀온 곳은 서울의 어느 한 레스토랑인데요!"</string>
    <string name="my_id">ID:</string>

</resources>