<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ll_login_wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">


        <LinearLayout
            android:id="@+id/ll_login_logo"
            style="@style/LinearLayoutVertical"

            android:layout_weight="2">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tastory_logo_light" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_input"
            style="@style/LinearLayoutVertical"

            android:layout_weight="3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_back"
                android:layout_marginHorizontal="50dp"
                >

                <EditText
                    android:id="@+id/et_login_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/EditTextIdPw"
                    android:hint="@string/id"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_pw_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_back"
                android:layout_marginTop="3dp"
                android:layout_marginHorizontal="50dp"
                >

                <EditText
                    android:id="@+id/et_login_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/EditTextIdPw"
                    android:hint="@string/pw"
                    android:inputType="textPassword"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_login_btn"
            style="@style/LinearLayoutVertical"
            android:gravity="center_horizontal"

            android:layout_weight="3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back"
                >

                <TextView
                    android:id="@+id/tv_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BtnText"
                    android:text="@string/login_btn"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back"
                android:layout_marginTop="15dp"
                >

                <TextView
                    android:id="@+id/tv_login_signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BtnText"
                    android:text="@string/signin_btn"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>